--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ nav > div:last-child > .active:after {
   color: white;
   top: 0;
   left: 0;
-  display: grid;
+  display: none;
   type-items: center;
   font-size: 32px;
   font-weight: bold;
@@ -260,4 +260,29 @@ nav > div:last-child > .active:after {
   height: 100vh;
   background-color: #fff;
   z-index: 100;
+}
+
+#contact-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    height: 100vh; /* Full height to center vertically */
+    background-color: black; /* Optional: to create contrast */
+    padding-top: 100px;
+}
+
+#contact-section h2, #contact-section p {
+    margin: 10px 0; /* Margin for spacing between elements */
+}
+
+#contact-section a {
+    color: white;
+    text-decoration: none; /* Remove underline */
+}
+
+#contact-section a:hover {
+    text-decoration: underline; /* Optional: underline on hover */
 }
