--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ nav > div {
   align-items: center;
   text-transform: uppercase;
   font-size: 14px;
+  cursor: pointer;
 }
 nav .program:hover {
   background-color:  #1a1a1a88;
@@ -285,4 +286,48 @@ nav > div:last-child > .active:after {
 
 #contact-section a:hover {
     text-decoration: underline; /* Optional: underline on hover */
+}
+/* Style for the hamburger menu */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 9999;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.hamburger div {
+  width: 100%;
+  height: 4px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+/* Hide nav items and show hamburger menu on mobile */
+@media (max-width: 768px) {
+  nav div {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+
+  }
+  
+  .nav-links {
+    display: none;
+  }
+  
+  .nav-links a:last-child {
+    border-bottom: none;
+  }
+
+  #nav-items.active {
+    display: flex;
+  }
+  
 }
