--- a/style.css
+++ b/style.css
@@ -333,6 +333,49 @@ nav > div:last-child > .active:after {
     right: 0px;
     top: 0px;
     padding: 20px;
-  }
-  
+  } 
 }
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+footer {
+    background-color: rgba(51, 51, 51, 0.8); /* Transparent background */
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+.footer-content {
+    padding: 0 36px;
+}
+
+.footer-content p {
+    margin: 5px 0;
+    float: left;
+}
+
+.footer-content a {
+    color: #fff;
+    text-decoration: none;
+    margin-top: 10px;
+    float: right;
+}
+
+.footer-content a svg {
+    fill: #fff;
+    transition: fill 0.3s;
+}
+
+.footer-content a:hover svg {
+    fill: #4267B2; /* Facebook brand color */
+}
+
