--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ body {
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
-.wrapper .title h1{
+.contact-wrappe .title h1{
   color: #c5ecfd;
   text-align: center;
   margin-bottom: 25px;
