--- a/style.css
+++ b/style.css
@@ -406,13 +406,21 @@ body {
 .btn {
     background: #39b7dd;
     text-align: center;
-    padding: 15px;
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
     text-transform: uppercase;
 }
 
+.btn button {
+    border: none;
+    background: none;
+    width: 100%;
+    height: 50px;
+    padding: 0px;
+    color: white;
+    font-size: 20px;
+}
 @media screen and (max-width: 600px){
   .contact-form{
     flex-direction: column;
