--- a/style.css
+++ b/style.css
@@ -190,12 +190,14 @@ nav > div:last-child > .active:after {
   z-index: 60;
   background-color: #ecad29;
 }
-
+#pagination {
+  display: none !important;
+}
 .pagination {
   position: absolute;
   left: 0px;
   top: 0px;
-  display: none;
+  display: none !important;
 }
 .pagination > .arrow {
   z-index: 60;
