hide left-right

--- a/style.css
+++ b/style.css
@@ -205,9 +205,10 @@ nav > div:last-child > .active:after {
   height: 50px;
   border-radius: 999px;
   border: 2px solid #ffffff55;
-  display: flex; 
+  display: none; 
   align-items: center; 
   justify-content: center;
+
 }
 .pagination > .arrow:nth-child(2) {
   margin-left: 20px;
@@ -217,6 +218,7 @@ nav > div:last-child > .active:after {
   height: 24px;
   stroke-width: 2;
   color: #ffffff99;
+  display: none; 
 }
 .pagination .progress-sub-container {
   margin-left: 24px;
